--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "main": "index.js",
   "author": "Andrew Mead",
   "license": "MIT",
+  "scripts": {
+    "serve": "live-server public/",
+    "build": "webpack --watch",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+  },
   "dependencies": {
+    "babel-cli": "6.24.1",
     "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1"
+    "babel-preset-react": "6.24.1",
+    "live-server": "^1.2.1",
+    "webpack": "^4.40.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "eslint": "^6.4.0",
-    "eslint-plugin-fp": "^2.3.0"
+    "eslint-plugin-fp": "^2.3.0",
+    "webpack-cli": "^3.3.9"
   }
 }
