--- a/package.json
+++ b/package.json
@@ -6,15 +6,28 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-loader": "7.1.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.4",
     "live-server": "^1.2.1",
-    "webpack": "^4.40.2"
+    "node-sass": "^4.12.0",
+    "normalize.css": "7.0.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-modal": "2.2.2",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "validator": "^11.1.0",
+    "webpack": "^4.40.2",
+    "webpack-dev-server": "3.8.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
